Revert "Merge remote-tracking branch 'upstream/master' into graph-node-manager-update"
This reverts commit bb0f817c9abc33d4c4e315eeccb1c3d1543df7a6, reversing
changes made to 00ae5807c4442fdde76eefb42669c7ac3350f4ac.

--- a/src/GraphNodeManagerViewExtension/GraphNodeManagerViewExtension.csproj
+++ b/src/GraphNodeManagerViewExtension/GraphNodeManagerViewExtension.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="FontAwesome5" Version="2.1.11" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
+    <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DynamoCoreWpf\DynamoCoreWpf.csproj">
